# Bullet-Memory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Context.md  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  README.md  SECURITY.md  bullet_memory.db-shm  bullet_memory.db-wal  docker-compose.yml  pyproject.toml  requirements.txt  ship.bat  start.bat  streamlit_app.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/adapters/: __init__.py  database.py  embedding.py  llm.py  vector.py
app/api/: chat.py  deps.py  ingest.py  memory.py  router.py  working_memory.py
app/core/: config.py  logging.py  orchestrator.py  prompts.py
app/memory/: __init__.py  cache.py  consolidation.py  context_builder.py  embeddings.py  episodes.py  exporter.py  extractor.py  models.py  prediction.py  redactor.py  retriever.py  scorer.py  service.py  updater.py  working_memory.py
app/utils/: helpers.py
examples/: basic_chat.py  sdk_example.py
frontend/: app.js  index.html  styles.css
scripts/: run_prod.bat  start.bat
sdk/: pyproject.toml
sdk/bullet_memory/: __init__.py  client.py
tests/: conftest.py  test_context_builder.py  test_episodes.py  test_extractor.py  test_prediction.py  test_scorer.py  test_vector_store.py  test_working_memory.py
